[workspace]
exclude = ["extras/", "cradle/", "examples/", "tools"]
members = [
    "base",
    "derive",
    "command-object",
    "modules/archive",
    "modules/serialization-utils",
    "modules/vertex-processing-pack",
    "modules/math",
    "modules/image",
    "modules/vg",
    "modules/transition",
]
