[workspace]
exclude = ["extras/", "cradle/", "examples/", "tools"]
members = [
    "base",
    "derive",
    "modules/archive",
    "modules/serialization-utils",
    "modules/vertex-processing-pack",
    "modules/math",
    "modules/image",
    "modules/vg",
    "modules/transition",
    "modules/command-object",
    "modules/memory-manager",
]

[workspace.dependencies]
bedrock = { git = "https://github.com/Pctg-x8/bedrock", branch = "peridot" }
tracing = "0.1"
