[workspace]
exclude = ["extras/", "cradle/", "examples/", "tools"]
members = [
    "base",
    "derive",
    "modules/archive",
    "modules/serialization-utils",
    "modules/vertex-processing-pack",
    "modules/math",
    "modules/image",
    "modules/vg",
    "modules/transition",
	"modules/command-object",
]

[workspace.dependencies]
bedrock = { git = "https://github.com/Pctg-x8/bedrock", branch = "peridot" }
