[package]
name = "peridot-archive"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

[dependencies]
crc = "1.8"
lz4-compression = "0.6"
libflate = "0.1"
zstd = "0.4"
peridot-serialization-utils = { path = "../serialization-utils" }

[dependencies.async-std]
version = "1.5"
features = ["unstable"]
