[package]
name = "peridot-archiver"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]

[features]
read = []

[dependencies]
clap = "2.32"
glob = "0.2"
libc = "0.2"
crc = "1.8"
lz4 = "1.23"
libflate = "0.1"
zstd = "0.4"
peridot-serialization-utils = { path = "../serialization-utils" }
