[package]
name = "peridot-image-loader"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peridot-module-interface = { path = "../mif" }
peridot-math = { path = "../math" }
image = "*"
