[package]
name = "peridot-math"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]

[features]
default = []
bedrock_interop = ["bedrock"]

[dependencies]
bedrock = { git = "https://github.com/Pctg-x8/bedrock", optional = true }
# bedrock = { path = "../../bedrock", optional = true }
euclid = "*"
