[package]
name = "peridot-mmdloader"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

[dependencies]
encoding = "*"
log = "0.4"
peridot-math = { path = "../math" }
peridot = { path = ".." }
rayon = "1.0"
bedrock = { git = "https://github.com/Pctg-x8/bedrock" }
