[package]
name = "peridot-vertex-processing-pack"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]

[dependencies]
bedrock = { git = "https://github.com/Pctg-x8/bedrock" }
peridot = { path = ".." }
peridot-serialization-utils = { path = "../serialization-utils" }

[dependencies.bedrock]
git = "https://github.com/Pctg-x8/bedrock"
