[package]
name = "peridot-vertex-processing-pack"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]

[features]
default = ["with-loader-impl"]
with-loader-impl = ["peridot"]

[dependencies]
bedrock = { git = "https://github.com/Pctg-x8/bedrock" }
peridot = { path = "..", optional = true }
peridot-serialization-utils = { path = "../serialization-utils" }
