[package]
name = "peridot-vg"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]

[dependencies]
peridot-math = { path = "../math" }
pathfinder_partitioner = { git = "https://github.com/Pctg-x8/pathfinder" }
lyon_path = "0.12"
euclid = "0.19"

[target.'cfg(target_os="macos")'.dependencies]
appkit = { git = "https://github.com/Pctg-x8/appkit-rs" }

[target.'cfg(target_os="android")'.dependencies]
android = { git = "https://github.com/Pctg-x8/android-defs-rs" }
