[package]
name = "peridot-cradle-android"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
name = "pegamelib"

[dependencies]
log = "0.4"
libc = "0.2"
android_logger = "0.5"
bedrock = { git = "https://github.com/Pctg-x8/bedrock", features = ["Implements", "Presentation"] }
peridot-vertex-processing-pack = { path = "../../vertex-processing-pack" }
android = { git = "https://github.com/Pctg-x8/android-defs-rs" }
peridot = { path = "../.." }

peridot-vertex-processing-pack = { path = "../../vertex-processing-pack" }
peridot-vg = { path = "../../vg" }
