[package]
name = "peridot-cradle-custom-rt"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
name = "pegame"

[dependencies]
peridot = { path = "../.." }
bedrock = { git = "https://github.com/Pctg-x8/bedrock", features = ["Implements", "VK_KHR_surface"] }
libc = "0.2"
