[package]
name = "peridot-cradle-linux"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

[features]
UseExternalAssetPath = []

[dependencies]
peridot = { path = "../.." }
bedrock = { git = "https://github.com/Pctg-x8/bedrock" }
log = "0.4"
env_logger = "0.5"
xcb = "0.8"

peridot-vertex-processing-pack = { path = "../../vertex-processing-pack" }
peridot-vg = { path = "../../vg" }
