[package]
name = "peridot-cradle-mac"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
build = "build.rs"
edition = "2018"

[lib]
crate-type = ["staticlib"]
name = "pegamelib"

[dependencies]
objc = "*"
appkit = { git = "https://github.com/Pctg-x8/appkit-rs" }
appkit-derive = { git = "https://github.com/Pctg-x8/appkit-rs" }
peridot = { path = "../../" }
peridot_derive = { path = "../../derive" }
bedrock = { git = "https://github.com/Pctg-x8/bedrock", features = ["Implements", "Presentation", "VK_MVK_macos_surface"] }
log = "0.4"
libc = "0.2"

peridot-vertex-processing-pack = { path = "../../vertex-processing-pack" }
