[package]
name = "peridot-cradle-windows"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
bedrock = { git = "https://github.com/Pctg-x8/bedrock" }
peridot = { path = "../.." }

[dependencies.winapi]
version = "0.3"
features = ["winuser", "libloaderapi"]
