[package]
name = "peridot-cradle-windows"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
UseExternalAssetPath = []

[dependencies]
bedrock = { git = "https://github.com/Pctg-x8/bedrock" }
peridot = { path = "../.." }
log = "0.4"
env_logger = "0.5"
peridot_derive = { path = "../../derive" }

peridot-vertex-processing-pack = { path = "../../vertex-processing-pack" }
peridot-vg = { path = "../../vg" }

[dependencies.winapi]
version = "0.3"
features = ["winuser", "libloaderapi"]
