[package]
name = "euphorizer"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

[dependencies]
peridot = { path = "../../" }
bedrock = { git = "https://github.com/Pctg-x8/bedrock", features = ["Presentation", "Implements"] }
log = "0.4"

peridot-vertex-processing-pack = { path = "../../vertex-processing-pack" }
