[package]
name = "image-plane"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

[features]
debug = ["bedrock/VK_EXT_debug_utils", "peridot/debug"]

[dependencies]
bedrock = { git = "https://github.com/Pctg-x8/bedrock", branch = "peridot" }
peridot = { path = "../../base", features = ["mt"] }
peridot-math = { path = "../../modules/math" }
peridot-vertex-processing-pack = { path = "../../modules/vertex-processing-pack" }
peridot-image = { path = "../../modules/image" }
peridot-command-object = { path = "../../modules/command-object" }
peridot-memory-manager = { path = "../../modules/memory-manager" }
async-std = "1.7"

log = "0.4"
