[package]
name = "mmdloader-example"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

[dependencies]
peridot = { path = "../.." }
peridot_derive = { path = "../../derive" }
bedrock = { git = "https://github.com/Pctg-x8/bedrock", features=["Implements"] }
peridot-vg = { path = "../../vg" }
peridot-mmdloader = { path = "../../mmdloader" }
peridot-gltf-loader = { path = "../../gltf-loader" }
peridot-vertex-processing-pack = { path = "../../vertex-processing-pack" }
