[package]
name = "tapfx"
description = "Peridot Examples: Tap/Click Effect"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peridot = { path = "../../base" }
bedrock = { git = "https://github.com/Pctg-x8/bedrock", branch = "peridot" }
peridot-vertex-processing-pack = { path = "../../modules/vertex-processing-pack" }
peridot-image = { path = "../../modules/image" }
peridot-command-object = { path = "../../modules/command-object", features = [
    "memory-manager-interop",
] }
peridot-memory-manager = { path = "../../modules/memory-manager" }
