[package]
name = "vg-example"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
peridot = { path = "../.." }
peridot-derive = { path = "../../derive" }
bedrock = { git = "https://github.com/Pctg-x8/bedrock", branch = "peridot", features = ["VK_EXT_debug_report"] }
log = "0.4"

peridot-vg = { path = "../../vg" }
peridot-vertex-processing-pack = { path = "../../vertex-processing-pack" }
