[package]
name = "vg-example"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"
build = "build.rs"

[features]
default = []
use-freetype = ["peridot-vg/use-freetype"]
use-fontconfig = ["peridot-vg/use-fontconfig"]

[dependencies]
peridot = { path = "../../base", features = ["derive"] }
bedrock = { git = "https://github.com/Pctg-x8/bedrock", branch = "peridot", features = [
    "VK_EXT_debug_report",
] }
log = "0.4"

peridot-vg = { path = "../../modules/vg" }
peridot-vertex-processing-pack = { path = "../../modules/vertex-processing-pack" }
