[package]
name = "peridot-memory-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bedrock = { workspace = true, features = [
    "VK_KHR_dedicated_allocation",
    "VK_KHR_get_memory_requirements2",
    "VK_KHR_bind_memory2",
] }
num-integer = "0.1.45"
peridot = { path = "../../base" }
tracing = { workspace = true }
