[package]
name = "peridot-shaderbuild"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]

[dependencies]
clap = "2.31"
bedrock = { git = "https://github.com/Pctg-x8/bedrock.git" }
regex = "1.0"
peridot-vertex-processing-pack = { path = "../../vertex-processing-pack", default-features = false }
log = "0.4"
env_logger = "0.5"
